Stream API simplifications (#6936)
* Replace 'collect(Collectors.toList())' with 'toList()'

* Replace '!anyMatch' with 'noneMatch'

* Replace 'collect(Collectors.counting())' with 'count()'

* Replace 'collect(Collectors.toUnmodifiableList())' with 'toList()'

* Apply suggestions from code review

Co-authored-by: Christoph Bartmann <BartChris@users.noreply.github.com>

* Restore 'toUnmodifiableList' calls

* Fix code indentation

---------

Co-authored-by: Christoph Bartmann <BartChris@users.noreply.github.com>